# weather-devops

./: .gitignore  .pre-commit-config.yaml  BUILD_MODULE.md  CURRICULUM.md  PROGRESS.md  README.md  WORKFLOW.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
app/: main.py
learning/: m00_foundations.md
learning/answers/m01_testing/: README.md  main.py  notes.md  test_weather.py  weather.py
tests/: test_health.py  test_weather.py
